@@ -2,12 +2,13 @@ package club.sk1er.mods.autogg.handlers.web;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
-import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 
 public class WebHandler {
     private static final Gson gson = new Gson();
@@ -19,7 +20,7 @@ public class WebHandler {
 
     public static String fetchString(String url) {
         try {
-            return fetchString(new URL(url));
+            return fetchString(URI.create(url).toURL());
         } catch (Exception e) {
             return "malformed url";
         }
@@ -29,9 +30,8 @@ public class WebHandler {
         try {
             URLConnection connection = url.openConnection();
             connection.setRequestProperty("User-Agent", "AutoGG");
-
             try (InputStream in = connection.getInputStream()) {
-                return IOUtils.toString(in, "UTF-8");
+                return new String(in.readAllBytes(), StandardCharsets.UTF_8);
             }
         } catch (IOException ex) {
             ex.printStackTrace();
